# docs/swagger.json
@@ -40,300 +40,6 @@
                 }
             }
         },
-        "/v1/category/delete/{id}": {
-            "delete": {
-                "description": "delete",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "delete",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (CategoryDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/category/list": {
-            "get": {
-                "description": "list",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "list",
-                "responses": {
-                    "200": {
-                        "description": "Response Success (CategoryDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/category/save": {
-            "post": {
-                "description": "save",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "save",
-                "parameters": [
-                    {
-                        "description": "CategoryDto.go",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (CategoryDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/category/update/{id}": {
-            "put": {
-                "description": "update",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "update",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "CategoryDto.go",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (CategoryDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/category/view/{id}": {
-            "get": {
-                "description": "view",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "category"
-                ],
-                "summary": "view",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (CategoryDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/category.CategoryDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/product/delete/{id}": {
-            "delete": {
-                "description": "delete",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "delete",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (ProductDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/product/list": {
-            "get": {
-                "description": "list",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "list",
-                "responses": {
-                    "200": {
-                        "description": "Response Success (ProductDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/product/save": {
-            "post": {
-                "description": "save",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "save",
-                "parameters": [
-                    {
-                        "description": "ProductDto.go",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (ProductDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/product/update/{id}": {
-            "put": {
-                "description": "update",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "update",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "ProductDto.go",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (ProductDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/product/view/{id}": {
-            "get": {
-                "description": "view",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "product"
-                ],
-                "summary": "view",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Response Success (ProductDto.go)",
-                        "schema": {
-                            "$ref": "#/definitions/product.ProductDto"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/user/delete/{id}": {
             "delete": {
                 "description": "delete",
@@ -345,6 +51,13 @@
                 ],
                 "summary": "delete",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "id",
@@ -373,6 +86,15 @@
                     "user"
                 ],
                 "summary": "list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Response Success (UserDto.go)",
@@ -402,6 +124,13 @@
                         "schema": {
                             "$ref": "#/definitions/user.UserDto"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -425,6 +154,13 @@
                 ],
                 "summary": "update",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "id",
@@ -464,6 +200,13 @@
                 "summary": "view",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "id",
                         "name": "id",
@@ -499,48 +242,6 @@
                     "type": "string",
                     "maxLength": 200,
                     "minLength": 1
-                }
-            }
-        },
-        "category.CategoryDto": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "maximum": 10,
-                    "minimum": 1
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 200,
-                    "minLength": 1
-                }
-            }
-        },
-        "product.ProductDto": {
-            "type": "object",
-            "required": [
-                "name",
-                "price"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "maximum": 10,
-                    "minimum": 1
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 200,
-                    "minLength": 1
-                },
-                "price": {
-                    "type": "number",
-                    "maximum": 11,
-                    "minimum": 1
                 }
             }
         },
