# module/category/category_controller.go
@@ -14,13 +14,13 @@ func NewCategoryController() *CategoryController {
 	return &CategoryController{}
 }
 
-// @Tags			category
-// @Router			/v1/category/save [post]
-// @Summary			save
-// @Description		save
-// @Param			RequestBody body category.CategoryDto true "CategoryDto.go"
-// @Produce			application/json
-// @Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
+// Tags			category
+// Router			/v1/category/save [post]
+// Summary			save
+// Description		save
+// Param			RequestBody body category.CategoryDto true "CategoryDto.go"
+// Produce			application/json
+// Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
 func (controller *CategoryController) Create(ctx *gin.Context) {
 	log.Info().Msg("Create")
 
@@ -28,14 +28,14 @@ func (controller *CategoryController) Create(ctx *gin.Context) {
 	baseController.OK(http.StatusOK, "", response, "", ctx)
 }
 
-// @Tags			category
-// @Router			/v1/category/update/{id} [put]
-// @Summary			update
-// @Description		update
-// @Param			id  path int true "id"
-// @Param			RequestBody body category.CategoryDto true "CategoryDto.go"
-// @Produce			application/json
-// @Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
+// Tags			category
+// Router			/v1/category/update/{id} [put]
+// Summary			update
+// Description		update
+// Param			id  path int true "id"
+// Param			RequestBody body category.CategoryDto true "CategoryDto.go"
+// Produce			application/json
+// Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
 func (controller *CategoryController) Update(ctx *gin.Context) {
 	log.Info().Msg("Update")
 
@@ -43,13 +43,13 @@ func (controller *CategoryController) Update(ctx *gin.Context) {
 	baseController.OK(http.StatusOK, "", response, "", ctx)
 }
 
-// @Tags			category
-// @Router			/v1/category/delete/{id} [delete]
-// @Summary			delete
-// @Description		delete
-// @Param			id  path int true "id"
-// @Produce			application/json
-// @Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
+// Tags			category
+// Router			/v1/category/delete/{id} [delete]
+// Summary			delete
+// Description		delete
+// Param			id  path int true "id"
+// Produce			application/json
+// Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
 func (controller *CategoryController) Delete(ctx *gin.Context) {
 	log.Info().Msg("Delete")
 
@@ -57,13 +57,13 @@ func (controller *CategoryController) Delete(ctx *gin.Context) {
 	baseController.OK(http.StatusOK, "", response, "", ctx)
 }
 
-// @Tags			category
-// @Router			/v1/category/view/{id} [get]
-// @Summary			view
-// @Description		view
-// @Param			id  path int true "id"
-// @Produce			application/json
-// @Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
+// Tags			category
+// Router			/v1/category/view/{id} [get]
+// Summary			view
+// Description		view
+// Param			id  path int true "id"
+// Produce			application/json
+// Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
 func (controller *CategoryController) FindById(ctx *gin.Context) {
 	log.Info().Msg("FindById")
 
@@ -71,12 +71,12 @@ func (controller *CategoryController) FindById(ctx *gin.Context) {
 	baseController.OK(http.StatusOK, "", response, "", ctx)
 }
 
-// @Tags			category
-// @Router			/v1/category/list [get]
-// @Summary			list
-// @Description		list
-// @Produce			application/json
-// @Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
+// Tags			category
+// Router			/v1/category/list [get]
+// Summary			list
+// Description		list
+// Produce			application/json
+// Success			200 {object} category.CategoryDto{} "Response Success (CategoryDto.go)"
 func (controller *CategoryController) FindAll(ctx *gin.Context) {
 	log.Info().Msg("findAll")
 
